Fix index table display on small devices

--- a/public/css/claims.index.css
+++ b/public/css/claims.index.css
@@ -1,6 +1,7 @@
 .table-link {
     display: inline-block;
     max-width: 200px;
+    min-width: 22px;
 }
 
 .search-block {
